objects/Setup_Audit_Trail_Config__c.object
<CustomObject>
    <fields>
        <fullName>Bulk_Batch_ID__c</fullName>
        <label>Bulk Batch ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bulk_Job_ID__c</fullName>
        <label>Bulk Job ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chatter_Group_Id__c</fullName>
        <label>Chatter Group Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_to_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post to Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>password__c</fullName>
        <label>password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>token__c</fullName>
        <label>token</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>username__c</fullName>
        <label>username</label>
        <type>Email</type>
    </fields>
    <label>Setup Audit Trail Config</label>
    <nameField>
        <label>Setup Audit Trail Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Setup Audit Trail Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>